<resources>
    <string name="app_name">Thermo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_register">Register</string>
    <string name="text_login">Log in</string>
    <string name="text_logout">Log out</string>
    <string name="tv_password">password</string>
    <string name="et_personName">name</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="case_name_home">Home</string>
    <string name="email">Email</string>
    <string name="case_devices_name">Device list</string>
    <string name="case_addDevice">Add device</string>
    <string name="measure">Celsius</string>
    <string name="testTemp">44.4</string>
</resources>