<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.fragments.LoginFragment">

    <ImageView
        android:id="@+id/iv_titleBackLogin"
        android:layout_width="@dimen/iv_title_width"
        android:layout_height="@dimen/iv_title_height"
        android:layout_marginTop="@dimen/iv_titleMarginTop"
        android:layout_marginStart="@dimen/iv_titleMarginStart"
        android:background="@drawable/ic_title_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titleMarginTop"
        android:text="@string/text_login"
        android:textSize="@dimen/tv_sizeAuthText"
        android:layout_marginStart="@dimen/iv_titleMarginStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_titleBackLogin" />

    <EditText
        android:id="@+id/et_personNameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titleMarginTop"
        android:ems="10"
        android:hint="@string/et_personName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loginText" />

    <EditText
        android:id="@+id/et_passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tv_password"
        android:ems="10"
        android:layout_marginTop="@dimen/titleMarginTop"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_personNameLogin" />

    <Button
        android:id="@+id/btn_loginPerson"
        android:layout_width="@dimen/btn_loginWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titleMarginTop"
        android:text="@string/text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passwordLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>